Add ability to sanitize username per-ldap-server on login
This allows to login using an email address to ldap servers
which require only the username part.

Signed-off-by: root <root@ops.squiz.co.uk>

--- a/app/sample-config.yaml
+++ b/app/sample-config.yaml
@@ -8,6 +8,13 @@ application:
       filter:   '(&(objectClass=inetOrgPerson)(ou=ou=Staff*)(uid={username}))'
       base_dn:  'dc=org,dc=net'
       timeout:  2
+      # If user_sanitize is defined, it will filter the inputted username
+      # using 'regex' and replace it with 'replace'. This uses pythons
+      # re.sub method, so documentation for this is available on the python
+      # docu site.
+      user_sanitize:
+        regex:    '@(email_domain\.(com\.au|co\.uk|net|pl|co\.nz))$'
+        replace:  ''
       sso_map:
         jwt:
           mail: 'email'
